<resources>
    <string name="app_name">NU_MAD_SP2023_Final_Project_10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_emotion">Name of Emotion:</string>
    <string name="is_this_emotion">Is this emotion...</string>
    <string name="positive">Positive</string>
    <string name="neutral">Neutral</string>
    <string name="negative">Negative</string>
    <string name="done">Done</string>
    <string name="what_mood">What was your mood today?</string>
    <string name="location">Location:</string>
    <string name="tags">Tags:</string>
    <string name="use_location">Use your location</string>
    <string name="type_here">Type here...</string>
    <string name="Moodlet">Moodlet</string>
    <string name="LoginText">Log in</string>
    <string name="RegisterText">Register</string>
    <string name="WelcomeBackText">Welcome Back!</string>
    <string name="LoginInstructionsText">Log in to your account.</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="CreateAccount">Create your account.</string>
    <string name="textName">Name</string>
    <string name="MemoryBoxText">Memory Box</string>
    <string name="AddPhotoText">Add Photo</string>
    <string name="NotesFromFriendsTitle">Notes from your friends...</string>
    <string name="SendNoteText">Send Note</string>
    <string name="AddFriendText">Add Friend</string>
    <string name="NoteText">Note</string>
    <string name="select_tag">Select Tags</string>
    <string name="new_tags">newTag1, newTag2, ...</string>
    <string name="Logout">Logout</string>
    <string name="RetakeText">Retake</string>
    <string name="UploadText">Upload</string>
    <string name="back">Prev</string>
    <string name="next">Next</string>
    <string name="MonthYear">Month, Year</string>

</resources>